# switch-lan-play

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SETUP_GUIDE_JP.md  build_linux.sh  build_win.sh
gui/: CMakeLists.txt  main.cpp
server/: package.json
server/src/: main.ts  monitor.ts  udpserver.ts
src/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  lan-client.c  lan-play.h  main.c
